feat: abstraction IReflection/IClass et migration complète des modules
Remplacement de java.lang.reflect par l'abstraction IReflection/IClass
dans tous les modules. Ajout de IReflectionProvider pluggable, IClass<T>,
IMethod, IField, IConstructor, IParameter, IRecordComponent. Suppression
des anciennes classes legacy (ObjectAccessor, ObjectFieldGetter/Setter,
FieldAccessManager, MethodAccessManager, ConstructorAccessManager,
ObjectReflectionHelper). Ajout de garganttua-runtime-reflection,
garganttua-configuration, garganttua-aot-common et garganttua-aot.
Mise à jour de l'injection, condition, mapper, supply, expression,
native, bootstrap et reflection pour utiliser IClass<T> partout.